# boost_reflect

./: .gitignore  CMakeLists.txt  README.md  agfile.tag  annotated.html  any__ptr_8hpp.html  any__ptr_8hpp_source.html  classboost_1_1idl_1_1any.html  classboost_1_1idl_1_1get__function__type-members.html  classboost_1_1idl_1_1set__delegate__visitor-members.html  classboost_1_1idl_1_1set__delegate__visitor.html  classboost_1_1idl_1_1set__delegate__visitor__coll__graph.map  classboost_1_1idl_1_1set__delegate__visitor__inherit__graph.md5  classboost_1_1reflect_1_1any__ptr-members.html  classboost_1_1reflect_1_1any__ptr.html  classboost_1_1reflect_1_1vtable.html  classes.html  classfd_1_1fast__delegate.html  cli_8dox.html  fast__delegate_8hpp.html  fast__delegate_8hpp__dep__incl.map  fast__delegate_8hpp__dep__incl.md5  fast__delegate_8hpp__incl.md5  fast__delegate_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  get__function__signature_8hpp.html  get__function__signature_8hpp__dep__incl.map  get__function__signature_8hpp__dep__incl.md5  get__function__signature_8hpp__incl.md5  get__function__signature_8hpp_source.html  get__function__type_8hpp.html  get__function__type_8hpp__incl.md5  get__function__type_8hpp_source.html  (+138 more)
boost/idl/: describe_visitor.hpp  fast_delegate.hpp  get_function_signature.hpp  get_function_type.hpp  get_typestring.hpp  idl.hpp  member_from_signature.hpp  message.hpp  method.hpp  mirror_interface.hpp  reflect.hpp  reflect_function_signature.hpp  varint.hpp
boost/reflect/: member_from_signature.hpp  reflect.hpp  reflect_function_signature.hpp
doc/: CMakeLists.txt  Doxyfile  cli.dox  doxygen.cfg  footer.html  main_page.dox  quickstart.dox  rpc_case_study.dox  vtable.dox
examples/: .gitignore  CMakeLists.txt  calculator.hpp  cli.hpp  rpc.hpp  rpc_client.cpp  rpc_server.cpp  signal.cpp  simple.cpp  test.cpp  value_test.cpp
include/: CMakeLists.txt
include/boost/reflect/: any.hpp  any_ptr.hpp  error.hpp  fast_delegate.hpp  iterator.hpp  member_from_signature.hpp  mirror_interface.hpp  reflect.hpp  typeinfo.hpp  value.hpp  value_base.hpp  value_cref.hpp  value_ref.hpp  value_visitor.hpp  void.hpp  vtable.hpp
include/boost/reflect/detail/: get_field.hpp  iterator.ipp  iterator_impl.hpp  place_holder.hpp  value.ipp  value_base.ipp  value_cref.ipp  value_ref.ipp
include/mace/reflect/: error.hpp  iterator.hpp  old.hpp  reflect.hpp  reflect_function_signature.hpp  typeinfo.hpp  value.hpp  value_base.hpp  value_cref.hpp  value_ref.hpp  value_visitor.hpp  void.hpp
include/mace/reflect/detail/: get_field.hpp  iterator.ipp  iterator_impl.hpp  place_holder.hpp  value.ipp  value_base.ipp  value_cref.ipp  value_ref.ipp
tests/: CMakeLists.txt  value_test.cpp
